force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/gupshupcrm__Flow_Configuration__c.object-meta.xml
<CustomObject>
    <label>Flow Configuration</label>
    <nameField>
        <label>Flow Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>