force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__Button_URL_Value__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Button_URL_Value__c</fullName>
    <label>Button URL Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>