force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__Channel__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>gupshupcrm__WhatsApp_Channel__c</referenceTo>
    <relationshipLabel>Flow Configurations</relationshipLabel>
    <relationshipName>Flow_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>