force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__CVId__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__CVId__c</fullName>
    <label>CVId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>