force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__File_Name__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>