force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__Header_Text_Variable_Value__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Header_Text_Variable_Value__c</fullName>
    <label>Header Text Variable Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>