force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__Header_Variables__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Header_Variables__c</fullName>
    <label>Header Variables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>