force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__Object__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>