force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Phone_Field__c</fullName>
    <label>Phone Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>