force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__Selected_Button_URL__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Selected_Button_URL__c</fullName>
    <label>Selected Button URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>