force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__Template__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Template__c</fullName>
    <label>Template</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>