force-app/main/default/objects/gupshupcrm__Flow_Configuration__c/fields/gupshupcrm__Text_Variable_Value__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Text_Variable_Value__c</fullName>
    <label>Text Variable Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>